# ezframes_live

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  IFNet_HDv3.py  README.md  RIFE_HDv3.py  launcher_log.txt  motion_interpolation.py  setup.bat  setup_v2.bat
.ai/: HANDOFF.md  OPERATING_RULES.md  PATH_MAP.md  STATE.md  TASKS.md  WORKSPACE_GOVERNANCE.md
Cutie_docs/: LICENSE  README.md
_internal/: libtorchaudio.pyd
migration_bridge/: README.md  ezcutie_v3_migrator.py
scripts/: audit_workspace_entropy.py  check_ai_memory.py  check_ai_memory_ci.py  (+1 more)
v3/: .gitignore  PARITY_CHECKLIST.md  README_V3.md  SECURITY.md  V3_MIGRATION_NOTES.md  bootstrap_launcher.py  ezcutie_v3.py  pyproject.toml  requirements_v3.txt
v3/docs/: INTERNAL_SECURITY_RUNBOOK_TEMPLATE.md
v3/packaging/inno/: ezframes_bootstrap.iss  manifest.v1.sample.json
v3/packaging/launcher_stub/: EzFramesLauncher.csproj  Program.cs
v3/src/: RIFE_HDv3.py  motion_interpolation.py
v3/src/ezframes/: __init__.py  __main__.py
v3/src/ezframes/app/: __init__.py  __main__.py  auth_gate.py  legacy_parity.py  mask_integration.py  motion_detection.py  rife_interpolation.py  ui_controller.py  video_io.py
v3/src/ezframes/common/: __init__.py  auth_tokens.py  config.py  entitlements.py  hashing.py  logging_utils.py  manifest_security.py  state.py  types.py
v3/src/ezframes/cutie_lite/: __init__.py  __main__.py  engine.py
v3/src/ezframes/launcher/: __init__.py  auth_service.py  cli.py  migration_service.py  process_service.py  runtime_installer.py  shortcut_service.py  update_service.py
v3/tests/: test_auth_tokens.py  test_manifest.py  test_migration_service.py  test_state.py
(+663 files in other folders)
